Fix inconsistency in treatment of `sm` text body class
In the VRTs, I noticed the sm story was the only one with extra margin at the top. I think it makes more sense for the behavior of these body typography classes to be the same.

--- a/packages/design-system/src/styles/_base.scss
+++ b/packages/design-system/src/styles/_base.scss
@@ -310,7 +310,8 @@ $breakpoints: (
 .ds-text,
 .ds-text--lead,
 .ds-text-body--lg,
-.ds-text-body--md {
+.ds-text-body--md,
+.ds-text-body--sm {
   font-family: var(--typography-body__font-family);
   line-height: var(--font-line-height-base);
   margin-block: 1em;
